--- a/src/app/components/publicar-lugar/publicar-lugar.component.html
+++ b/src/app/components/publicar-lugar/publicar-lugar.component.html
@@ -244,7 +244,7 @@
         <i class="material-icons right">publish</i>
       </button>
 
-      <button class="btn right" type="submit" *ngIf="paso < 4" (click)="siguientePaso()">Siguiente
+      <button class="btn right waves-effect waves-light" type="submit" *ngIf="paso < 4" (click)="siguientePaso()">Siguiente
         <i class="material-icons right">send</i>
       </button>
 
@@ -255,7 +255,7 @@
   </div>
   <div class="row my10px">
     <div class="col">
-      <button class="btn left red" (click)="confirmacionCancelar()">Cancelar publicación
+      <button class="btn left red waves-effect waves-light" (click)="confirmacionCancelar()">Cancelar publicación
         <i class="material-icons left">cancel</i>
       </button>
     </div>
